--- a/kivy/ui_template/bci.kv
+++ b/kivy/ui_template/bci.kv
@@ -1,5 +1,4 @@
-#:import MDLabel kivymd.label.MDLabel
-#:import MDCard kivymd.card.MDCard
+#:import Label kivymd.label.Label
 
 <FFT>:
 	orientation: 'vertical'
