--- a/kivy/ui_template/bci.kv
+++ b/kivy/ui_template/bci.kv
@@ -50,25 +50,57 @@
 			values:('Auto', '10μV', '100μV', '1mV','10mV','100mV','1000mV')
 			on_text:self.parent.parent.set_scale()
 
+<CountDown>:
+	spacing:'10dp'
+	orientation:'horizontal'
+	size_hint:(1,0.1)
+
+	BoxLayout:
+		Label:
+			size_hint:(0.3,1)
+			text:'Remaining time'
+
+		Label:
+			size_hint:(0.3,1)
+			id:remaingTime
+			text:''
+
+		ProgressBar:
+			id:progress
+			size_hint:(0.3,1)
+			value:80
+			max:100
+
+
 <SerialPortSelection>:
 	spacing:'10dp'
 	orientation:'horizontal'
-	Spinner:
-		id:uart
-		#text:''
-		#values:()
-		size_hint:(0.7,1)
+	BoxLayout:
+		size_hint:(1,1)
 
-	Button:
-		size_hint:(0.2,1)
-		text:'Refresh'
-		on_press: self.parent.scanPorts(0)
+		Spinner:
+			id:uart
+			#text:''
+			#values:()
+			size_hint:(0.7,1)
 
-	ToggleButton:
-		id:connect
-		size_hint:(0.2,1)
-		text:'Connect'
-		on_state: self.parent.changeState(self.state)
+		Button:
+			size_hint:(0.2,1)
+			text:'Refresh'
+			on_press: self.parent.parent.scanPorts(0)
+
+		Spinner:
+			id:duration
+			text:'Unlimited'
+			values:('Unlimited','5s','30s','60s','90s','120s','300s','600s')
+			size_hint:(0.2,1)
+
+		ToggleButton:
+			id:connect
+			size_hint:(0.2,1)
+			text:'Connect'
+			on_state: self.parent.parent.changeState(self.state)
+
 
 <RealTimePlotting>:
 	orientation:'vertical'
@@ -123,6 +155,7 @@
 			orientation: 'vertical'
 			padding:'10dp'
 			spacing:'10dp'
+			id:debug
 
 			FFT:
 				id: FFT
