Classify done with 3s for blinking and the same duration for rest. Huffman encoding

--- a/kivy/ui_template/bci.kv
+++ b/kivy/ui_template/bci.kv
@@ -139,7 +139,7 @@
 		Spinner:
 			id:filters
 			size_hint:(0.2,1)
-			text:'None'
+			text:'4Hz-45Hz'
 			values:('None','Highpass:4Hz','4Hz-60Hz','4Hz-45Hz')
 			on_text: self.parent.parent.set_filter()
 		Spinner:
