Callback on stimuli and fix thread not terminated when close the App

--- a/kivy/ui_template/stimuli.kv
+++ b/kivy/ui_template/stimuli.kv
@@ -28,12 +28,14 @@
 #			spacing:'10dp'
 
 			TextInput:
-				text:'Please Input'
+				id:inputText
+				text:''
 				size_hint_y:None
-				height:30
+				height:50
+				font_size:30
 
 			GridLayout:
-				padding:[100,50,100,100]
+				padding:[100,30,100,100]
 				spacing:[300,100]
 				cols:3
 
